fix: apply overflow-wrap to td, th cell

--- a/src/resources/sass/component/_table.scss
+++ b/src/resources/sass/component/_table.scss
@@ -19,6 +19,7 @@
     border-bottom: 2px solid var(--table-header-border-color);
     font-weight: bold;
     padding: 8px 16px;
+    overflow-wrap: break-word;
   }
 }
 
@@ -31,6 +32,7 @@
 
     .td-cell {
       padding: 16px;
+      overflow-wrap: break-word;
     }
   }
 }
